--- a/src/templates/list/add_item.html
+++ b/src/templates/list/add_item.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block body %}
-        <form action="{% url 'List:add_item' list.id %}" method="post">
+        <form method="post">
             {% csrf_token %}
             {{ form.as_ul }}
             <input type="submit">
