--- a/src/templates/auth/signup.html
+++ b/src/templates/auth/signup.html
@@ -1,7 +1,12 @@
-SIGNUP
+{% extends 'base/base.html' %}
 
-<form action={% url 'Home:signup' %} method="post">
-{% csrf_token %}
-{{ form }}
-<input type="submit">
-</form>
+{% block body %}
+        <h1>SIGNUP</h1>
+
+        <form action={% url 'Home:signup' %} method="post">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit">
+        </form>
+
+{% endblock body %}
