--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href=""> <!-- add base.css !-->
         {% block stylesheets %}{% endblock stylesheets %}
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700;800&display=swap" rel="stylesheet">
     </head>
     <body>
         {% block body %}{% endblock body %}
