--- a/src/static/home.css
+++ b/src/static/home.css
@@ -7,7 +7,7 @@
 }
 
 .list-card {
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     border-radius: 2rem;
     width: 20rem;
     margin: 1rem;
@@ -17,32 +17,16 @@
     padding: 1rem 0;
 }
 
+.list-card p {
+    opacity: 0.7;
+    font-weight: 400;
+}
+
 .list-buttons {
-    /* align-self: flex-end; */
     display: flex;
     align-items: center;
     justify-content: center;
     justify-self: flex-end;
-}
-
-.list-buttons button {
-    margin: 0.1rem;
-    background-color: rgb(30, 166, 252);
-    color: #fff;
-    border: 0px;
-    border-radius: 10rem;
-    padding: 0.5rem;
-}
-.list-buttons button:hover {
-    background-color: rgb(30, 135, 252);
-    cursor: pointer;
-}
-.list-buttons button:active {
-    background-color: rgb(30, 120, 252);
-}
-.list-buttons button:focus {
-    box-shadow: 0 0 0 3px rgb(125, 195, 238);
-    outline: none;
 }
 
 .create-list {
@@ -65,9 +49,4 @@
 .create-list button:hover {
     background-color: rgb(240, 240, 240);
     cursor: pointer;
-}
-
-body {
-    font-family: 'Montserrat';
-    font-weight: 400;
 }
