--- a/src/templates/list/view_list.html
+++ b/src/templates/list/view_list.html
@@ -1,28 +1,32 @@
 {% extends 'base/base.html' %}
+{% load static %}
+
+{% block stylesheets %}
+<link rel="stylesheet" href="{% static 'view_list.css' %}">
+{% endblock stylesheets %}
 
 {% block body %}
-        <div style="background-color: #fae3a5;">
-            <h1>LIST VIEW - {{ list.name }}</h1>
+        <div style="background-color: #fae3a5; text-align:center;">
+            <h1>{{ list.name }}</h1>
             <h4>{{ list.description }}</h4>
         </div>
         <br>
 
-        <a href="{% url 'List:add_item' list.id %}">
-            <button type="button">Add Item</button>
-        </a>
+        <a class="button-main" href="{% url 'List:add_item' list.id %}">Add Item</a>
 
         {% for item in list.items.all %}
-        <div style="background-color: #fae3a5;">
-            <h3>Name: {{ item.name }}</h2>
-            <h4>Description: {{ item.description }}</h4>
-            <h6>Created at: {{ item.created_at|date:"D d M Y" }}</h6>
-            <a href="{% url 'List:update_item' list.id item.id %}">
-                <button type="button">Update Item</button>
-            </a>
-            <form action="{% url 'List:delete_item' list.id item.id %}" method="post">
-                {% csrf_token %}
-                <button type="submit">Delete</button>
-            </form>
+        <div class="item-card">
+            <div class="item-card-text">
+                <h3>{{ item.name }}</h2>
+                <p>{{ item.description }}</h4>
+            </div>
+            <div class="item-card-buttons">
+                <a class="button-main" href="{% url 'List:update_item' list.id item.id %}">Update</a>
+                <form action="{% url 'List:delete_item' list.id item.id %}" method="post">
+                    {% csrf_token %}
+                    <button class="button-main" type="submit">Delete</button>
+                </form>
+            </div>
         </div>
         {% endfor %}
 
