--- a/src/static/view_list.css
+++ b/src/static/view_list.css
@@ -1,21 +1,55 @@
 .item-card {
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-    margin: 1rem;
+    background-color: white;
+    margin: 0.4rem;
     border-radius: 0.8rem;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    justify-content: space-around;
-    padding: 0.1rem 5rem;
+    padding: 0.1rem 2rem;
+}
+
+.item-card-main {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.button-add-item {
+    position: fixed;
+    right: 2rem;
+    bottom: 2rem;
+    width: 3.5rem;
+    height: 3.5rem;
+    text-align: center;
+    border-radius: 50%;
+    background-color: black;
+    text-decoration: none;
+    color: white;
+    font-weight: 300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.5rem;
+}
+
+.button-add-item:hover {
+    background-color: rgb(27, 27, 27);
+}
+
+.button-add-item:active {
+    background-color: rgb(47, 47, 47);
+}
+
+.button-add-item:focus {
+    box-shadow: 0 0 0 3px rgb(47, 47, 47);
+    outline: none;
 }
 
 .item-card-buttons {
     display: flex;
-}
-
-.item-card h3 {
-    justify-self: center;
-    align-self: center;
+    column-gap: 0.25rem;
 }
 
 .item-card-text {
@@ -23,12 +57,63 @@
     max-width: 30rem;
 }
 
-.item-card-text p {
-    opacity: 0.65;
+.item-card-text .desc-light {
+    font-size: small;
+}
+
+.list-info {
+    padding: 10px;
 }
 
 @media only screen and (max-width: 578px) {
     .item-card {
         padding: 1rem 1rem;
     }
+}
+
+
+/* https://codepen.io/AllThingsSmitty/pen/WjZVjo */
+
+.round {
+    position: relative;
+    width: 4rem;
+}
+
+.round label {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    cursor: pointer;
+    height: 28px;
+    width: 28px;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.round label:after {
+    border: 2px solid #fff;
+    border-top: none;
+    border-right: none;
+    content: "";
+    height: 6px;
+    left: 7px;
+    opacity: 0;
+    position: absolute;
+    top: 8px;
+    transform: rotate(-45deg);
+    width: 12px;
+}
+
+.round input[type="checkbox"] {
+    visibility: hidden;
+}
+
+.round input[type="checkbox"]:checked+label {
+    background-color: #66bb6a;
+    border-color: #66bb6a;
+}
+
+.round input[type="checkbox"]:checked+label:after {
+    opacity: 1;
 }
