--- a/src/templates/list/view_list.html
+++ b/src/templates/list/view_list.html
@@ -8,37 +8,51 @@
 {% endblock stylesheets %}
 
 {% block body %}
-        <div class="list-info">
-            <h1>{{ list.name }}</h1>
-            <p class="desc-light">{{ list.description }}</p>
-        </div>
-        <br>
-
-        <a class="button-add-item" href="{% url 'List:add_item' list.id %}">+</a>
-        <p class="desc-light">Pending</p>
-        {% for item in list.items.all %}
-        <div class="item-card">
-            <div class="item-card-checkbox">
-                <div class="round">
-                    <input type="checkbox" id="checkbox{{ forloop.counter }}" />
-                    <label for="checkbox{{ forloop.counter }}"></label>
-                </div>
+        <div class="content">
+            <div class="side-nav">
+                <p>Lists</p>
+                <hr>
+                {% for todolist in all_lists %}
+                <a href="{% url 'List:view' todolist.id %}" style="text-decoration:none;">
+                    <div class="side-nav-card">
+                        <p style="margin-bottom:0.5rem;">{{ todolist.name }}</p>
+                        <p class="desc-light" style="font-size:small;margin-top:0.1rem;">{{ todolist.items.all|length }} tasks</p>
+                    </div>
+                <a>
+                {% endfor %}
             </div>
-            <div class="item-card-main">
-                <div class="item-card-text">
-                    <p>{{ item.name }}</p>
-                    <p class="desc-light">{{ item.description }}</p>
+            <div class="main-container">
+                <div class="list-info">
+                    <h1>{{ list.name }}</h1>
+                    <p class="desc-light">{{ list.description }}</p>
                 </div>
-                <div class="item-card-buttons">
-                    <a class="button-main" href="{% url 'List:update_item' list.id item.id %}">Update</a>
-                    <form action="{% url 'List:delete_item' list.id item.id %}" method="post">
-                        {% csrf_token %}
-                        <button class="button-main" type="submit">Delete</button>
-                    </form>
+                <a class="button-add-item" href="{% url 'List:add_item' list.id %}">+</a>
+                <p class="desc-light">Pending</p>
+                {% for item in list.items.all %}
+                <div class="item-card">
+                    <div class="item-card-checkbox">
+                        <div class="round">
+                            <input type="checkbox" id="checkbox{{ forloop.counter }}" />
+                            <label for="checkbox{{ forloop.counter }}"></label>
+                        </div>
+                    </div>
+                    <div class="item-card-main">
+                        <div class="item-card-text">
+                            <p>{{ item.name }}</p>
+                            <p class="desc-light">{{ item.description }}</p>
+                        </div>
+                        <div class="item-card-buttons">
+                            <a class="button-main" href="{% url 'List:update_item' list.id item.id %}">Update</a>
+                            <form action="{% url 'List:delete_item' list.id item.id %}" method="post">
+                                {% csrf_token %}
+                                <button class="button-main" type="submit">Delete</button>
+                            </form>
+                        </div>
+                    </div>
                 </div>
+                {% endfor %}
+                <p class="desc-light">Finished</p>
             </div>
         </div>
-        {% endfor %}
-        <p class="desc-light">Finished</p>
 
 {% endblock body %}
