item completed status

--- a/src/static/view_list.css
+++ b/src/static/view_list.css
@@ -160,6 +160,10 @@
     border-radius: 0.3rem;
 }
 
+.side-nav-card i {
+    padding: 0 0.5rem 0 0;
+}
+
 .side-nav-card:hover {
     background-color: rgb(247, 247, 247);
 }
