--- a/src/static/home.css
+++ b/src/static/home.css
@@ -7,7 +7,8 @@
 }
 
 .list-card {
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+    background-color: white;
     border-radius: 2rem;
     width: 20rem;
     margin: 1rem;
